Deprication cleanup